# batemanRecords

./: .gitignore  .readthedocs.yaml  Makefile  README.md  app.py  bateman.sh  cli.py  debug_facebook_access_token.py  get_instagram_account.py  get_user_pages.py  long_lived_access_token_facebook.py  pyproject.toml  requirements-docs.txt  setup.md  spot.py
app/: application.py  bateman.sh  cli.py  config.py  spot.py
app/bucket/: generate_imgur_access_token.py  giphy.py  imgur.py  main.py  tmpfiles.py
app/facebook/: debug_facebook_access_token.py  get_instagram_account.py  get_user_pages.py  long_lived_access_token_facebook.py
app/scripts/: combineAudioVideo.sh  generateVideoYoutube.sh
app/youtube/: download.py  image.py  main.py  thumbnail.py  utils.py
docs/source/: conf.py  index.rst  scripts.rst  setup.rst  usage.rst
docs/source/modules/: app.rst  bucket.rst  debug_facebook_access_token.rst  get_instagram_account.rst  get_user_pages.rst  imgur.rst  long_lived_access_token_facebook.rst  social.rst  spot.rst
imgur/: generate_imgur_access_token.py  imgur.py
scripts/: combineAudioVideo.sh
